--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,15 @@ dependencies {
     compile 'org.hibernate:hibernate-core:4.3.2.Final'
     compile 'com.mchange:c3p0:0.9.2.1'
     runtime 'mysql:mysql-connector-java:5.1.34'
-    
+
+    compile 'org.slf4j:slf4j-api:1.7.7'
+
+    compile 'org.slf4j:slf4j-log4j12:1.7.7'
+    compile 'org.slf4j:jcl-over-slf4j:1.7.7'
+    runtime 'log4j:log4j:1.2.17'
+
+    compile 'taglibs:standard:1.1.2'
+    providedCompile 'javax.servlet:servlet-api:2.5'
     testCompile 'org.easymock:easymock:3.3.1'
     testCompile 'org.springframework:spring-test:4.1.4.RELEASE'
     testCompile 'junit:junit:4.12'
