--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,7 +3,7 @@
 #
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jiankangbao?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
+jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
 jdbc.password=123456
 
